# Mini_Project_MarionaPuente

./: .gitignore  Mini_Project_MarionaPuente.code-workspace  Miniproject.ipynb  README.md  pyproject.toml
