[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "Miniproject"
requires-python = ">=3.12"
version = "1.0"
dependencies = [
    # Add runtime dependencies here
]
[project.optional-dependencies]
dev = [
    "ipykernel",
    "Miniproject[ds]",
    "jupyterlab==4.3.1",
]
ds = [
    "numpy==2.1.3",
    "pandas==2.2.3",
    "matplotlib==3.9.2",
    "scikit-learn==1.5.2",
    "seaborn",
    "plotly",
    "statsmodels",
]